2048-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-2048-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-2048
  template:
    metadata:
      labels:
        app: game-2048
    spec:
      containers:
      - name: game-2048
        image: kubespheredev/2048
        ports:
        - containerPort: 80
